--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.4.2",
-    "request": "^2.88.0",
+    "request": "^2.88.0"
   }
 }
