--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "discord.js": "^11.4.2",
     "express": "^4.16.3",
     "got": "^9.2.0",
-    "request": "^2.88.0"
+    "opusscript": "0.0.6",
+    "request": "^2.88.0",
+    "ytdl-core": "^0.25.0"
   }
 }
