--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nysbot",
   "version": "1.0.0",
   "description": "NYS Bot for Discord",
+  "engines": {
+    "node": "8.11.3",
+    "npm": "5.6.0"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
